--- a/18.03_project_1/index.css
+++ b/18.03_project_1/index.css
@@ -48,6 +48,7 @@ body {
   margin: 0 auto;
   border-radius: 20px;
   box-shadow: 0px 10px 10px rgba(0, 0, 0,0.1);
+  position: relative;
 }
 .sticky {
   position: sticky;
